<resources>
    <string name="app_com_name">com.myhealth.app</string>
    <string name="app_name">MyHealth</string>

    <string name="action_settings">Settings</string>

    <string name="email_input_field_hint">Email</string>
    <string name="password_input_field_hint">Password</string>

    <string name="login_button_text">Login</string>
    <string name="email_error">Email is incorrect!</string>
    <string name="password_error">Password is incorrect!</string>
    <string name="login_unsuccessful">Login unsuccessful</string>
    <string name="bluetooth_string">Refresh paired devices</string>
    <string name="connection_success">Connection success</string>
    <string name="connection_error">Connection failed. Is the device in range?</string>
    <string name="drawer_view_measurements">Measurements</string>
    <string name="drawer_receive_measurements">Receive measurements</string>
    <string name="passwordEditScreenWelkom">This is the first time you logged in. Your password need to be edited</string>
    <string name="title_activity_password_edit">Password edit</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Confirm new password</string>
    <string name="password_button">Change</string>
    <string name="password_empty1">New password can not be empty</string>
    <string name="password_empty2">Conform password can not be empty</string>
    <string name="password_not_the_same">The password need to be the same as password 1</string>
    <string name="password_edit_succesvol">The password has been changed</string>
    <string name="password_edit_unsuccesvol">The password is not changed there is a </string>
    <string name="no_internet_connection">You don\'t have an internet connection!</string>
    <string name="data_received">Data received</string>
    <string name="beat_per_minute">"Beats per minute: "</string>
    <string name="bp_history">BP history</string>
</resources>
