<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="myhealth.com.myhealth.passwordEdit.PasswordEditActivity">

    <TextView
        android:id="@+id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordEditScreenWelkom" />

    <EditText
        android:id="@+id/editPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_edit_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/password_edit_text"
        android:layout_below="@+id/password_edit_text"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editPassword1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editPassword1"
        android:layout_below="@+id/editPassword1"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword2"
        android:layout_centerHorizontal="true"
        android:text="@string/password_button" />

</RelativeLayout>
